name:                eta-bench
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable eta-bench
  main-is:             src/Build.hs
  build-depends:       base >=4.8 && <4.9
                     , cmdargs
                     , containers
                     , directory
                     , Glob >= 0.9.0
                     , process
                     , process-extras
                     , shake == 0.16.4
                     , time
  default-language:    Haskell2010
  ghc-options:         -O2
