name:                eta-bench
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable eta-bench
  main-is:             Build.hs
  build-depends:       base >=4.8 && <4.9
                     , shake
                     , cmdargs
                     , directory
                     , time
                     , process
                     , containers
  default-language:    Haskell2010
  ghc-options:         -O2