name:                fibers-dev
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Concurrent.Fiber
                       Control.Concurrent.Fiber.MVar
                       Control.Concurrent.Fiber.Internal
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , transformers
  hs-source-dirs:      src
  java-sources:        prim/PrimOps.java
  default-language:    Haskell2010
  default-extensions:  InstanceSigs
                       ScopedTypeVariables
                       GHCForeignImportPrim
                       MagicHash
                       UnboxedTuples
                       UnliftedFFITypes
  ghc-options:         -ddump-stg -ddump-to-file
  
executable  Main
    main-is: Main.hs
    build-depends:
        base >=4.8 && <4.9
      , transformers
      , fibers-dev
    default-language: Haskell2010
    hs-source-dirs:  .
    ghc-options: -threaded -rtsopts